<?xml version="1.0"?>
<package>

    <name>tams_bartender_glass_recognition</name>
    <version>0.0.0</version>
    <description>tams_bartender_glass_recognition</description>

    <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>
    <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>

    <license>...</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <run_depend>rospy</run_depend>

    <build_depend>opencv2</build_depend>
    <run_depend>opencv2</run_depend>

    <build_depend>moveit_commander</build_depend>
    <run_depend>moveit_commander</run_depend>

    <build_depend>moveit_msgs</build_depend>
    <run_depend>moveit_msgs</run_depend>

    <export>
    </export>

</package>
